Fix stretching and errant button

--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -41,7 +41,8 @@
 .clan-award {
     max-width: 60px;
     max-height: 60px;
-    zoom: 1.3;
+    zoom: 1.2;
+    align-self: center;
 }
 
 .award-image {
@@ -84,7 +85,7 @@
     right: -20px;
     bottom: -78px;
     position: absolute;
-    color: rgba(0, 0, 0, .05);
+    color: rgba(0, 0, 0, .1);
     font-size: 210px;
 }
 
